tests/expected_invalid_parse_missing_expression.diag.out
<input>:3:13: error: expected expression
        let x = ;
                ^
